# 42-taskmaster

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
config/: backoff.json  config.json  env.json  file.json  folder.json  notworking.json  taskmaster.json  unkillable.json  wait.json
src/: config_parser.c  main.c  taskmaster.h
src/client/: socket_client.c  taskmasterctl.c  taskmasterctl.h
src/client/input/: commands.c  readline.c  readline.h
src/client/socket/: socket_client.h
src/parsing/: parser.c  parser_assign.c
src/server/: config_reload.c  epoll.c  epoll.h  free.c  handler.c  process_vector.c  server_commands.c  socket_server.c  socket_server.h  taskmasterd.c  taskmasterd.h
src/server/log/: logging.c  logging.h
src/server/parsing/: absolute_cmd.c  compare.c  parser.c  parser_assign.c
src/server/server/: socket_server.c
src/server/socket/: socket_server.c  socket_server.h
src/shared/: ft_intlen.c  ft_stris.c  shared.h  split_args.c  state_to_string.c
tests/: build.sh  env.c  wait.c  youcantkillme.c
